--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ header ul li a.active{
 .contact-box span{
     color: var(--text-color);
     font-size: 0.9rem;
-    text-transform: uppercase;
+    text-transform: lowercase;
 }
 .contact-box-location{
     grid-column: 1/3;
